# reuters-tc

./: .gitignore  Classification_Reuters.ipynb  DataAnalysis.ipynb  LICENSE  README.md  README.rst  pyproject.toml
archive/: Blogpost-Nov16.ipynb
notebook/: Blogpost-Nov16.ipynb  Classification_Reuters.ipynb
notebooks/: DataAnalysis.ipynb
representation/: core.py
reuters_tc/: __init__.py  dataset.py  main.py  main_HF.py
reuters_tc/modelling/: base.py  sklearn_classifiers.py  transformer_classifiers.py
reuters_tc/models/: sklearn_classifiers.py
reuters_tc/training/: trainer.py
src/: run.py
src/representation/: core.py
