[project]
name = "reuters-tc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "spacy>=3.8.3",
]

[dependency-groups]
dev = [
    "pip>=24.3.1",
]
